--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
 *{
     margin: 0;
     padding: 0;
+    outline: none;
     box-sizing: border-box;
 }
 body{
@@ -25,7 +25,7 @@ body{
     top: 0;
     z-index: 7;
 }
-/* .navbar::before{
+.navbar::before{
     content:'';
     position: absolute;
     top: 0px;
@@ -33,10 +33,10 @@ body{
     right: 10px;
     height: 100%;
     width: 100%;
-    z-index: 1;
+    z-index: -1;
     opacity: 0.2;
 
-} */
+}
 .desktop-navbar{
     display: flex;
     justify-content: space-between;
@@ -212,7 +212,7 @@ body{
 }
 .trending-h2{
     margin: 20px 0px;
-    font-style:'Poppins', sans-serif;
+    font-family:'Poppins', sans-serif;
 }
 .product-card{
     width: 250px;
@@ -320,12 +320,6 @@ body{
     padding-top: 30px;
     font-family: 'Poppins', sans-serif;
 }
-/* .App{
-   width: 50%;
-} */
-/* .product-detail-section{
-    border: 1px solid white;
-} */
 .product-detail-section h3{
     font-size: 20px;
     margin-bottom: 20px;
@@ -879,7 +873,6 @@ body{
     height: 350px;
 }
 
-/* #191919-body, #12DAA8-link, #1d1d1d-footer */
 @media screen and (max-width: 1024px){
     .box{
         width: 100%;
