--- a/src/App.css
+++ b/src/App.css
@@ -63,6 +63,7 @@ body{
 .search-container{
     display: flex;
     align-items: center;
+    position: relative;
     background-color: white;
     height: 42px;
     width: 100%;
@@ -90,7 +91,8 @@ body{
     color: black;
     font-size: 24px;
     position: absolute;
-    right: 25px;
+    right: 10px;
+    top: 10px;
    
 }
 .right-side{
