--- a/src/App.css
+++ b/src/App.css
@@ -53,6 +53,7 @@ body{
     min-width: 128px;
 }
 .menu-container{
+    cursor: pointer;
     display: flex;
     align-items: center;
     gap: 4px;
@@ -102,6 +103,7 @@ body{
     padding-left: 12px;
 }
 .location{
+    cursor: pointer;
     display: flex;
     align-items: center;
     gap: 8px;
@@ -112,6 +114,7 @@ body{
 }
 .cart{
     position: relative;
+    cursor: pointer;
 }
 .cart p{
     width: 12px;
@@ -173,12 +176,14 @@ body{
 }
 .banner-img{
     width: 100%;
+    cursor: pointer;
     /* height: 380px; */
 }
 .banner-img img{
     width: 100%;
 }
 .mobile-banner-img{
+    cursor: pointer;
     width: 100%;
     /* height: 280px; */
 }
